--- a/app/src/main/res/layout/lgin_main.xml
+++ b/app/src/main/res/layout/lgin_main.xml
@@ -30,29 +30,7 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent">
 
-        <com.lsjwzh.widget.materialloadingprogressbar.CircleProgressBar
-            android:id="@+id/progress1"
-            app:mlpb_show_arrow="true"
-            android:visibility="gone"
 
-            app:mlpb_arrow_height="5dp"
-            app:mlpb_arrow_width="10dp"
-
-
-            android:layout_centerInParent="true"
-            app:mlpb_progress_stoke_width="3dp"
-            app:mlpb_progress_color="#566da9"
-            android:layout_width="70dp"
-            android:layout_height="70dp" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Please Wait..."
-            android:visibility="gone"
-            android:id="@+id/pw"
-            android:layout_below="@+id/progress1"
-            android:layout_centerHorizontal="true" />
         <LinearLayout
             android:id="@+id/ll1"
             android:layout_width="match_parent"
@@ -64,7 +42,6 @@
             <ImageView
                 android:layout_gravity="center_horizontal"
                 android:layout_width="100dp"
-                android:layout_marginTop="20dp"
                 android:src="@drawable/hh"
                 android:layout_height="225dp"
                 android:id="@+id/imageView4" />
@@ -78,6 +55,27 @@
                 android:id="@+id/textView2"
                 android:textSize="30dp"
                 android:textColor="#d92020" />
+
+            <com.lsjwzh.widget.materialloadingprogressbar.CircleProgressBar
+                android:id="@+id/progress1"
+                app:mlpb_show_arrow="true"
+                android:visibility="gone"
+                app:mlpb_arrow_height="5dp"
+                app:mlpb_arrow_width="10dp"
+                android:layout_centerInParent="true"
+                app:mlpb_progress_stoke_width="3dp"
+                app:mlpb_progress_color="#566da9"
+                android:layout_width="70dp"
+                android:layout_height="70dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Please Wait..."
+                android:visibility="gone"
+                android:id="@+id/pw"
+                android:layout_below="@+id/progress1"
+                android:layout_centerHorizontal="true" />
 
 
         </LinearLayout>
@@ -136,9 +134,10 @@
                 android:layout_height="wrap_content" android:orientation="vertical">
 
                 <AutoCompleteTextView android:id="@+id/email" android:layout_width="match_parent"
-                    android:layout_height="wrap_content" android:hint="EMAIL ID"
+                    android:layout_height="wrap_content" android:hint="EMAIL ID / USERNAME"
                     android:inputType="text" android:maxLines="1"
                     android:imeOptions="actionNext"
+                    android:textSize="14sp"
                     android:singleLine="true"
                     android:background="@drawable/gg_edit_text_holo_light"
                     android:layout_marginBottom="10dp"
@@ -151,6 +150,7 @@
                     android:imeOptions="actionDone" android:inputType="textPassword"
                     android:maxLines="1" android:singleLine="true"
                     android:layout_marginBottom="10dp"
+                    android:textSize="14sp"
                     android:background="@drawable/gg_edit_text_holo_light"
                     android:textColorHint="#777"
                     android:textColor="#777" />
