--- a/app/src/main/res/layout/main_page_list.xml
+++ b/app/src/main/res/layout/main_page_list.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:id="@+id/mainRelativeLayout"
-    android:background="#f1f1f1"
+    android:background="#fff"
     android:layout_height="fill_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
     <com.lsjwzh.widget.materialloadingprogressbar.CircleProgressBar
         android:id="@+id/progress1"
@@ -20,11 +20,11 @@
 
     <RelativeLayout
         android:layout_width="wrap_content"
-        android:background="#f1f1f1"
+        android:background="#fff"
         android:id="@+id/headerRelativeLayout"
         android:visibility="gone"
         android:paddingTop="5dp"
-        android:paddingRight="5dp"
+        android:paddingRight="3dp"
         android:paddingLeft="5dp"
         android:layout_alignParentTop="true"
         android:layout_height="wrap_content">
@@ -56,8 +56,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/barcodeImageView"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true" />
+            android:layout_alignParentRight="true" />
     </RelativeLayout>
 
     <SearchView
@@ -66,7 +65,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:iconifiedByDefault="false"
-        android:padding="2dp"
+        android:visibility="invisible"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="2dp"
         android:queryHint="Search...." />
 
 <RelativeLayout
@@ -75,19 +76,56 @@
     android:visibility="gone"
     android:layout_below="@+id/search_view"
     android:layout_height="fill_parent">
-    <dapp.com.awok.awokdriversapp.Utils.PullRefreshLayout
-        android:id="@+id/swipeRefreshLayout"
+
+    <LinearLayout
+        android:id="@+id/lay_main_tabstrip"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+    <com.astuetz.PagerSlidingTabStrip
+        android:id="@+id/pager_tab_strip"
+        app:pstsShouldExpand="true"
+        app:pstsTextAllCaps="true"
+        android:layout_width="match_parent"
+        android:layout_height="48dp">
+    </com.astuetz.PagerSlidingTabStrip>
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/pager"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:color/white" />
+    </LinearLayout>
+
+
+        <!--<android.support.v4.view.ViewPager-->
+            <!--android:id="@+id/pager"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!-->-->
+
+            <!--<android.support.v4.view.PagerTabStrip-->
+                <!--android:id="@+id/pager_tab_strip"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_gravity="top"-->
+                <!--android:background="#f1f1f1"-->
+                <!--android:textColor="#333"-->
+                <!--android:paddingTop="4dp"-->
+                <!--android:paddingBottom="4dp" />-->
+
+
+        <!--</android.support.v4.view.ViewPager>-->
+
         <ListView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:visibility="gone"
             android:id="@+id/orderListView"
             android:divider="@color/list_divider"
             android:dividerHeight="1dp"
             android:listSelector="@drawable/list_row_selector"
             android:layout_gravity="center_horizontal" />
-    </dapp.com.awok.awokdriversapp.Utils.PullRefreshLayout>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
