--- a/app/src/main/res/layout/new_listada.xml
+++ b/app/src/main/res/layout/new_listada.xml
@@ -27,12 +27,11 @@
 
     <RelativeLayout
         android:layout_width="fill_parent"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="10dp"
+        android:gravity="center_vertical"
         android:layout_below="@+id/categoryLinearLayout"
         android:id="@+id/rowLinearLayout"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true">
+        android:layout_marginTop="10dp">
         <TextView
             android:id="@+id/orderNumberTextView"
             android:layout_width="wrap_content"
@@ -114,9 +113,10 @@
         android:layout_height="wrap_content"
         android:background="#333333"
         android:id="@+id/red"
-        android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:layout_alignTop="@+id/categoryLinearLayout" />
+        android:layout_alignTop="@+id/rowLinearLayout"
+        android:layout_alignParentStart="false"
+        android:layout_marginTop="10dp" />
 
 </RelativeLayout>
 
