--- a/app/src/main/res/layout/settings_table.xml
+++ b/app/src/main/res/layout/settings_table.xml
@@ -2,12 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent" android:layout_height="match_parent">
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <ImageView
         android:layout_width="50dp"
         android:layout_height="75dp"
         android:layout_margin="20dp"
         android:id="@+id/imageButton"
-
         android:src="@drawable/hh"
         android:layout_gravity="center_horizontal" />
 
@@ -27,8 +34,6 @@
     android:orientation="vertical"
     android:gravity="bottom"
     android:layout_height="match_parent">
-
-
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -131,9 +136,6 @@
                     android:id="@+id/button_server" />
             </LinearLayout>
         </LinearLayout>
-
-
-
     <LinearLayout
         android:layout_width="fill_parent"
         android:background="#dddddd"
@@ -146,7 +148,6 @@
             android:padding="5dp"
             android:background="#FFFFFF"
             android:layout_height="wrap_content">
-
             <TextView
                 android:layout_width="fill_parent"
                 android:layout_weight="1"
@@ -155,7 +156,6 @@
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="Small Text"
                 android:id="@+id/t_name" />
-
             <Button
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
@@ -307,6 +307,7 @@
 
 
 
-</LinearLayout>
-
+        </LinearLayout>
+    </LinearLayout>
+</ScrollView>
 </LinearLayout>
