All functionalities complete. A few change requests to be implemented

--- a/app/src/main/res/layout/alert_server.xml
+++ b/app/src/main/res/layout/alert_server.xml
@@ -18,6 +18,7 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:imeOptions="flagNoFullscreen"
         android:background="@drawable/gg_edit_text_holo_light"
         android:textAppearance="?android:attr/textAppearanceMedium"
 
