--- a/app/src/main/res/layout/activity_alert.xml
+++ b/app/src/main/res/layout/activity_alert.xml
@@ -25,6 +25,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
+                android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="10dp"
                 android:gravity="center_horizontal">
 
@@ -74,21 +75,23 @@
 
                         <EditText android:id="@+id/edit_pass" android:layout_width="match_parent"
                             android:layout_height="wrap_content" android:hint="PIN"
-                            android:imeOptions="actionNext" android:inputType="textPassword"
+                            android:imeOptions="actionNext|flagNoFullscreen" android:inputType="textPassword"
                             android:maxLines="1" android:singleLine="true"
                             android:layout_marginBottom="10dp"
                             android:textSize="14sp"
-                            android:background="@drawable/gg_edit_text_holo_light"
+                            android:padding="10dp"
+                            android:background="@drawable/edit_text_border_black"
                             android:textColorHint="#777"
                             android:textColor="#777" />
 
                         <EditText android:id="@+id/confirm_password" android:layout_width="match_parent"
                             android:layout_height="wrap_content" android:hint="PIN"
-                            android:imeOptions="actionDone" android:inputType="textPassword"
+                            android:imeOptions="actionDone|flagNoFullscreen" android:inputType="textPassword"
                             android:maxLines="1" android:singleLine="true"
                             android:layout_marginBottom="10dp"
                             android:textSize="14sp"
-                            android:background="@drawable/gg_edit_text_holo_light"
+                            android:padding="10dp"
+                            android:background="@drawable/edit_text_border_black"
                             android:textColorHint="#777"
                             android:textColor="#777" />
                         <LinearLayout
