--- a/app/src/main/res/layout/dialog_enter_admin_password.xml
+++ b/app/src/main/res/layout/dialog_enter_admin_password.xml
@@ -11,6 +11,7 @@
         android:layout_width="fill_parent"
         android:layout_marginTop="10dp"
         android:ems="10"
+        android:imeOptions="flagNoFullscreen"
         android:textColor="#333333"
         android:hint="Enter Password"
         android:inputType="textPassword"/>
