--- a/app/src/main/res/layout/main_page_list.xml
+++ b/app/src/main/res/layout/main_page_list.xml
@@ -1,22 +1,47 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!--<?xml version="1.0" encoding="utf-8"?>-->
+<!--<RelativeLayout -->
+    <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
+    <!--android:layout_width="fill_parent"-->
+    <!--android:id="@+id/mainRelativeLayout"-->
+    <!--android:background="#fff"-->
+    <!--android:layout_height="fill_parent"-->
+    <!--android:orientation="vertical">-->
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:id="@+id/mainRelativeLayout"
     android:background="#fff"
-    android:layout_height="fill_parent"
-    android:orientation="vertical">
+    android:layout_height="fill_parent">
 
-    <com.lsjwzh.widget.materialloadingprogressbar.CircleProgressBar
-        android:id="@+id/progress1"
-        app:mlpb_show_arrow="true"
-        app:mlpb_arrow_height="5dp"
-        app:mlpb_arrow_width="10dp"
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
         android:layout_centerInParent="true"
-        app:mlpb_progress_stoke_width="3dp"
-        app:mlpb_progress_color="#566da9"
-        android:layout_width="70dp"
-        android:layout_height="70dp" />
+        android:gravity="center"
+        android:orientation="vertical">
+        <com.lsjwzh.widget.materialloadingprogressbar.CircleProgressBar
+            android:id="@+id/progress1"
+            app:mlpb_show_arrow="true"
+            app:mlpb_arrow_height="5dp"
+            app:mlpb_arrow_width="10dp"
+            app:mlpb_progress_stoke_width="3dp"
+            app:mlpb_progress_color="#566da9"
+            android:layout_width="70dp"
+            android:layout_height="70dp" />
+
+        <TextView
+            android:layout_marginTop="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="Please Wait..."
+            android:visibility="visible"
+            android:id="@+id/waitTextView"
+            android:layout_centerHorizontal="true" />
+    </LinearLayout>
+
 
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -59,22 +84,30 @@
             android:layout_alignParentRight="true" />
     </RelativeLayout>
 
+    <View
+        android:background="#ddd"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        />
     <SearchView
         android:id="@+id/search_view"
         android:layout_below="@+id/headerRelativeLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:iconifiedByDefault="false"
-        android:visibility="invisible"
+        android:layout_alignParentBottom="true"
+        android:visibility="visible"
+        android:background="#0000"
+        android:imeOptions="flagNoFullscreen"
         android:layout_alignParentRight="true"
         android:layout_marginRight="2dp"
-        android:queryHint="Search...." />
+        android:queryHint="Search order..." />
 
 <RelativeLayout
     android:layout_width="fill_parent"
     android:id="@+id/bodyRelativeLayout"
     android:visibility="gone"
-    android:layout_below="@+id/search_view"
+    android:layout_above="@+id/search_view"
     android:layout_height="fill_parent">
 
     <LinearLayout
@@ -137,13 +170,5 @@
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 </RelativeLayout>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Please Wait..."
-        android:visibility="visible"
-        android:id="@+id/waitTextView"
-        android:layout_below="@+id/progress1"
-        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
